<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="20dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/title"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_open"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="open printer\n打开打印机"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="close printer\n关闭打印机"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/convert_printer"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/print_convert"
            android:textSize="20sp" />

        <Button
            android:id="@+id/printer_test"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/print_zijian"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dayin_gb2312"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/dayin_gb2312"
            android:textSize="18sp" />

        <Button
            android:id="@+id/dayin_unicode"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/dayin_unicode"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/print_qrcode"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/print_qrcode"
            android:textSize="20sp" />

        <Button
            android:id="@+id/print_image"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/print_image"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>